--- a/app/src/main/res/layout/backgroudfoto.xml
+++ b/app/src/main/res/layout/backgroudfoto.xml
@@ -49,6 +49,7 @@
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:padding="10dp"
+
         >
 
 
@@ -56,17 +57,21 @@
             android:id="@+id/button"
             android:layout_width="120dp"
             android:layout_height="45dp"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="44dp"
+            android:backgroundTint="@color/fondo"
+            android:radius="50dip"
             android:text="Log in "
+            android:background="@drawable/botonera"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <Button
             android:layout_width="120dp"
             android:layout_height="45dp"
             android:layout_marginEnd="28dp"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/fondo"
             android:text="Sing up"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.841"
